--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "redis": "^4.6.7"
   }
 }
